# peercast-re

./: .env.example  .env.sample  .gitignore  .prettierignore  .prettierrc.yml  Cargo.toml  Cross.toml.sample  HOW_TO_USE.md  README.md  TODO.md  _build.docker.sh  _build.sh  api.codegen.sh  api.docker-compose.sh  build-dev.sh  build-release.sh  build.bat  build.docker.sh  build.rs  build.sh  compose.sh  compose.yml  cspell.json  docker-compose.openapi.yml  docker-compose.yml  icon.rc
.cargo/: config.toml
.github/workflows/: build.yaml  cleanup-branch.yaml  delete-workflow.yml  matrix.json  release.yaml
api/: openapi.yaml  peercast-port-checkerd.yaml
api/config/: config_file_text.yaml
api/rust-config/: lib.mustache
assets/: script.js
benches/benchmarks/: compare_channels.rs  compare_fibonacci.rs
check-specifications/: Cargo.toml
client/: .prettierrc  package-lock.json  package.json  tsconfig.json
client/src/: env.d.ts
client/src/components/: ChannelCard.tsx  Sidebar.tsx
client/src/components/forms/: BrodcastChannelForm.tsx
client/src/lib/: api.ts
client/src/pages/: channels.tsx  config.tsx  error-pages.tsx
client/src/routes/: _index.tsx  router.tsx
debian/default/: peercast-root
debian/scripts/: postinst  postrm  prerm
doc/: PeerCast-YT.md  PeerCastStation.md  channel.drawio  channel.md  channel_broker.md  class.drawio  graph.md  outgoing.md  peercast-re_eco_system.md  peercast_eco_system.md
doc/slide/2023_09_12_cascket/: base.css  create.slide.sh  dev.sh  slide.md
docker/: Dockerfile.peercast-root
examples/simple-daemon/: cli.rs
libpeercast-re/: .editorconfig  AUTHORS.md  Cargo.toml  Makefile.toml  build.rs  dev.sh  docker-compose.build-api.yml  watch.sh
libpeercast-re-apis/: .gitignore  build.sh  docker-compose.build-api.yml  docker-compose.openapi.yml
libpeercast-re-apis/api/: rust-config.yaml
libpeercast-re/.cargo/: config.toml
libpeercast-re/LICENSE/: MIT-LICENSE
libpeercast-re/api/models/: Channel.yaml
libpeercast-re/assets/: footer.yml
libpeercast-re/benches/: bench_main.rs
libpeercast-re/benches/benchmarks/: atom_parser.rs
libpeercast-re/client/: package-lock.json
libpeercast-re/client/src/components/: Menu.tsx
libpeercast-re/client/src/layouts/: mainLayout.tsx
libpeercast-re/doc/: OutgoinConnectionRetry.md  _just_memo_.md  pcp_protocol.md  peercast-re_eco_system.md
libpeercast-re/doc/slide/: .gitignore  README.md
libpeercast-re/examples/example-taskmgmt/: main.rs
libpeercast-re/examples/simple-daemon/: main.rs
libpeercast-re/src/: error.rs  lib.rs
libpeercast-re/src/codec/: mod.rs
libpeercast-re/src/codec/rtmp/: flv.rs
libpeercast-re/src/config/: config.example.ini  loader.rs  mod.rs
libpeercast-re/src/http/: http_svc.rs  middleware.rs  mod.rs
libpeercast-re/src/http/api/: channels.rs  mod.rs
libpeercast-re/src/pcp/: classify.rs  gnuid.rs  id4.rs  session.rs
libpeercast-re/src/pcp/builder/: hello.rs  mod.rs  oleh.rs  quit.rs
libpeercast-re/src/pcp/channel/: channel_info.rs  channel_stream.rs  mod.rs  node_pool.rs  track_info.rs
libpeercast-re/src/pcp/connection/: _pcp_connection.rs  pcp.rs
libpeercast-re/src/pcp/procedure/: pcp_handshake.rs
libpeercast-re/src/pcp/service/: yellow_page.rs
libpeercast-re/src/pcp/tracker_channel/: mod.rs
libpeercast-re/src/rtmp/: mod.rs
libpeercast-re/src/util/: shutdown.rs  sync.rs
libpeercast-re/tests/: integration_test.rs
peercast-re/: Cargo.toml  build.rs  build.sh  gen-openapi.sh  openapi.json
peercast-re/client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
peercast-re/client/src/: App.tsx  index.css
peercast-re/client/src/components/: ChannelCard.tsx  ChannelPlayer.tsx
peercast-re/client/src/components/forms/: BrodcastChannelForm.tsx
peercast-re/client/src/components/my-ui/: slim-form.tsx
peercast-re/client/src/lib/: api.ts
peercast-re/client/src/pages/: channels.tsx  config.tsx
peercast-re/client/src/routes/: root.tsx
peercast-re/docker/: Dockerfile.x86_64-pc-windows-gnu
peercast-re/src/: api.rs  cli.rs  config.rs  main.rs  ui.rs
peercast-root/: .gitignore  Cargo.toml  LICENSE  run.sh
peercast-root/assets/: index.html
peercast-root/debian/: peercast-port-checkerd.service  peercast-root.service
peercast-root/share/: peercast-root_footer.toml
peercast-root/share/debian/: service
peercast-root/share/debian/default/: peercast-port-checkerd
peercast-root/src/: cli.rs  index_info.rs  lib.rs  main.rs  repository.rs  shutdown.rs  shutdown2.rs  shutdown3.rs
peercast-utils/: Cargo.toml
script/: compile_production.sh  release.sh
share/: peercast-port-checkerd  peercast-port-checkerd.service
src/: conn.rs  error.rs  lib.rs  main.rs  test_helper.rs
src/app/: cui.rs  cui_dl.rs  root_server.rs  server.rs
src/codec/rtmp/: flv.rs
src/config/: config.example.ini  config.test.ini.j2  loader.rs  mod.rs
src/http/: http_svc.rs  middleware.rs  mod.rs
src/http/api/: channels.rs  config.rs
src/http/ui/: mod.rs  static_file.inc
src/pcp/: atom.rs  classify.rs  error_code.rs  gnuid.rs  id4.rs  mod.rs  node.rs  session.rs  util.rs
src/pcp/atom/: decode.rs  encode.rs  mod.rs
src/pcp/atom/decode/: macros.rs  pcp_broadcast.rs  pcp_channel.rs  pcp_channel_info.rs  pcp_helo.rs  pcp_host.rs  pcp_track_info.rs
src/pcp/builder/: broadcast.rs  channel_info.rs  hello.rs  host.rs  mod.rs  ok.rs  oleh.rs  ping_pong.rs  quit.rs  root.rs  track_info.rs
src/pcp/channel/: broker.rs  channel.rs  channel_info.rs  channel_stream.rs  manager.rs  mod.rs  track_info.rs
src/pcp/connection/: factory.rs  inner.rs  mod.rs  pcp_connection.rs  tmp_incoming.rs  tmp_outgoing.rs
src/pcp/parser/: mod.rs
src/pcp/procedure/: handshake.rs  http_req.rs  mod.rs  new_handshake.rs  pcp_handshake.rs  pcp_ping.rs
src/pcp/service/: mod.rs
src/rtmp/: LICENSE-MEMO.txt  connection.rs  rtmp_connection.rs
src/rtmp/stream_manager/: mod.rs
src/util/: identify.rs  mod.rs  util_mpsc.rs  version_print.rs
tests/: integration_test.rs
tests/files/config/: peercast-rt_error.ini
(+16 files in other folders)
