[package]
name = "peercast-re"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tetsuyainfra/peercast-re"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "peercast-re"
# default-run = "rtmp"
build = "build.rs"


[dependencies]
peercast-re-api = { path = "./gen/rust" }


# Error handling
thiserror = { version = "1.0" }
# anyhow = "1.0"

# tracing logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-futures = "0.2"
tracing-attributes = "0.1"

# log = "0.4"

# バイナリ操作
bytes = { version = "*", features = ["serde"] }
byteorder = "1"
nom = { version = "7.1.3" }

flavors = { git = "https://github.com/rust-av/flavors", rev = "833508af656d298c269f2397c8541a084264d992" }

# 数値操作(cast等)
num = "0.4.1"

# 非同期処理
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
tokio-test = { version = "0.4.2" }
tokio-util = { version = "0.7.8" }

# ip adrees range
ipnet = { version = "2.8.0", features = ["serde"] }

# http
http = { version = "*" }
httparse = { version = "1.8.0" }

# http-server

axum-core = { version = "*", git = "https://github.com/tokio-rs/axum", branch = "main" }
axum = { version = "*", git = "https://github.com/tokio-rs/axum", branch = "main", features = [
    "form",
    "ws",
    "tracing",
] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tower-hyper-http-body-compat = { version = "0.2.0", features = [
    "http1",
    "server",
] }
# hyper = { version = "0.14", features = ["full"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", rev = "f898015", features = [
    "full",
] }

# HTML Template engine
askama = { version = "0.12.0", features = ["mime", "mime_guess"] }
# askama_axum = { version = "0.3.0" }
minijinja = { version = "1.0.5", features = ["loader"] }
# axum-template = { version = "0.19.0", features = ["minijinja"] }

# Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
# serde_derive = { version = "1.0" } # serde features = ["derive"]しているので必要ない
serde_json = "1.0"


# Future
pin-project-lite = "0.2"
# pin-project = "1.0"

sync_wrapper = "0.1"

# AsyncTraitを作る
async-trait = "0.1"

# tokio-towerのコードをTESTする用
# async-bincode = "0.7"

# commandline argment
clap = { version = "4.3", features = ["derive", "env", "unicode"] }

# url
url = { version = "2.4" }

# http/get
# ureq = { version = "2.5" }

# embed file
rust-embed = { version = "8.0.0", features = [
    "include-exclude",
    "debug-embed",
] }
# debug-embed
# compression
mime_guess = { version = "2.0.4" }

# Timezoneなどを取り扱い
chrono = { version = "0.4.29", features = ["serde"] }
chrono-tz = "0.8.3"

# GnuId
uuid = { version = "1.4", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# password
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }

# ini
rust-ini = { version = "0.19.0", features = ["inline-comment"] }

# macro utilities
paste = "1.0.14"

# RTMP
# amf = "1.0.0"
rml_amf0 = "0.3.0"
rml_rtmp = "0.8.0"

# Units(単位系)
# ubyte = "0.10.3"

# Units(単位系) 人間向け
human_bytes = "0.4.3"

# Global Variable (for Lazy[Cell])
once_cell = "1.18.0"

# Home direcotry
dirs = "5.0.1"

# doucment string
indoc = "2.0"
reqwest = { version = "0.11.19", features = ["stream"] }


# prcess exit code
exitcode = "1"
bitflags = "2.4.0"

# Utopia for OpenApi(Swagger) this crate for axum 0.6
# utoipa = { version = "3.5.0", features = [
#   "axum_extras",
# ] }
# utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
# utoipa-redoc = { version = "0.1.0", features = ["axum"] }
# utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["stable", "async_tokio"] }

[build-dependencies]
npm_rs = { version = "1.0.0" }
embed-resource = "2.3"


[[bench]]
name = "bench_main"
harness = false
