[package]
name = "check-specifications"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95" }

# tracing logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
    "local-time",
] }

# Async
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17" }
tokio-test = { version = "0.4.4" }
tokio-util = { version = "0.7.13", features = ["rt"] }
console-subscriber = { version = "0.4.1" }


# Axum
axum-core = { version = "*" }
axum = { version = "0.8.1", features = ["tokio", "form", "ws", "tracing"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
axum-server = { version = "0.7.2" } # THIS IS NOT Axum Community build

# Axum-option
axum-client-ip = { version = "0.7.0" }

tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "cors",
    "util",
    "request-id",
    "timeout",
    "add-extension",
] }

# http
http = { version = "1.3.1" }
httparse = { version = "1.10.1" }


# Redis
redis = { version = "0.32.0", features = ["tokio-comp"] }

# Connection Pool
bb8 = "0.9.0"
bb8-redis = "0.24.0"


# Commandline
clap = { version = "4.5.27", features = ["derive", "env", "unicode"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }


# Serialize/Deserialize
serde = { version = "1.0.217", features = ["derive"] }
# serde_derive = { version = "1.0" } # serde features = ["derive"]しているので必要ない
serde_json = "1.0.138"

# demonize
daemonize = "0.5.0"

# Use for using buildtime-infomation by vergen
vergen-pretty = { version = "0.3.9", features = ["header"] }


[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc"] }
vergen-git2 = { version = "1.0.5" }